tests/snapshots/ars_comments_tests__comment_ordering_by_score.snap
---
source: tests/ars_comments_tests.rs
expression: comments
snapshot_kind: text
---
[
  {
    "content": "High score comment",
    "author": "User2",
    "score": 10,
    "timestamp": null
  },
  {
    "content": "Medium score comment",
    "author": "User3",
    "score": 5,
    "timestamp": null
  },
  {
    "content": "Low score comment",
    "author": "User1",
    "score": 1,
    "timestamp": null
  }
]
