tests/snapshots/ars_comments_tests__comment_scores_are_not_always_zero.snap
---
source: tests/ars_comments_tests.rs
expression: test_result
---
upvotes: [79, 71, 53, 54, 45], downvotes: [0, 0, 0, 3, 0], net_scores: [79, 71, 53, 51, 45], has_non_zero_upvotes: true
