tests/snapshots/ars_comments_tests__comment_scores_are_not_always_zero_online.snap
---
source: tests/ars_comments_tests.rs
expression: test_result
---
online_comments_count_5_has_votes_true_total_votes_true
