tests/snapshots/ars_comments_tests__comment_struct_creation.snap
---
source: tests/ars_comments_tests.rs
expression: comment
snapshot_kind: text
---
{
  "content": "Test content",
  "author": "Test Author",
  "score": 10,
  "timestamp": "2025-01-01T12:00:00Z"
}
