tests/snapshots/ars_comments_tests__comment_struct_serialization.snap
---
source: tests/ars_comments_tests.rs
expression: deserialized
---
{
  "content": "Test content",
  "author": "Test Author",
  "upvotes": 12,
  "downvotes": 2,
  "timestamp": "2025-01-01T12:00:00Z"
}
