tests/snapshots/ars_comments_tests__debug_comment_html_structure.snap
---
source: tests/ars_comments_tests.rs
expression: "format!(\"all_comments_score_elements: {:?}\", all_score_elements)"
---
all_comments_score_elements: ["comment_0: [\"classes: [], text: '6'\", \"classes: [\\\"contentVote-scores\\\"], text: '0\\n\\t\\t\\t\\t\\t(0\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"ars_voteScore\\\"], text: '0\\n\\t\\t\\t\\t\\t(0\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--total\\\", \\\"js-voteCount\\\", \\\"js-voteCount--total\\\"], text: '0'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--positive\\\"], text: '0'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--negative\\\", \\\"js-voteCount\\\", \\\"js-voteCount--negative\\\"], text: '0'\"]", "comment_1: [\"classes: [\\\"pairs\\\", \\\"pairs--justified\\\"], text: '575'\", \"classes: [], text: '575'\", \"classes: [\\\"fauxBlockLink-linkRow\\\", \\\"u-concealed\\\"], text: '575'\", \"classes: [\\\"uix_reactionBarWrapper\\\"], text: '•••\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tMore options\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tReport\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\t\\n\\tAdd bookmark\\n\\n\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tShare'\", \"classes: [\\\"contentVote-scores\\\"], text: '72\\n\\t\\t\\t\\t\\t(72\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"ars_voteScore\\\"], text: '72\\n\\t\\t\\t\\t\\t(72\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--total\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--total\\\"], text: '72'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--positive\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--positive\\\"], text: '72'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--negative\\\", \\\"js-voteCount\\\", \\\"js-voteCount--negative\\\"], text: '0'\"]", "comment_2: [\"classes: [\\\"pairs\\\", \\\"pairs--justified\\\"], text: '307'\", \"classes: [], text: '307'\", \"classes: [\\\"fauxBlockLink-linkRow\\\", \\\"u-concealed\\\"], text: '307'\", \"classes: [\\\"uix_reactionBarWrapper\\\"], text: '•••\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tMore options\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tReport\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\t\\n\\tAdd bookmark\\n\\n\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tShare'\", \"classes: [\\\"contentVote-scores\\\"], text: '50\\n\\t\\t\\t\\t\\t(53\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t-3)'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--total\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--total\\\"], text: '50'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--positive\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--positive\\\"], text: '53'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--negative\\\", \\\"is-negative\\\", \\\"js-voteCount\\\", \\\"js-voteCount--negative\\\"], text: '-3'\"]", "comment_3: [\"classes: [\\\"uix_reactionBarWrapper\\\"], text: '•••\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tMore options\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tReport\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\t\\n\\tAdd bookmark\\n\\n\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tShare'\", \"classes: [\\\"contentVote-scores\\\"], text: '79\\n\\t\\t\\t\\t\\t(79\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"ars_voteScore\\\"], text: '79\\n\\t\\t\\t\\t\\t(79\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--total\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--total\\\"], text: '79'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--positive\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--positive\\\"], text: '79'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--negative\\\", \\\"js-voteCount\\\", \\\"js-voteCount--negative\\\"], text: '0'\"]", "comment_4: [\"classes: [\\\"pairs\\\", \\\"pairs--justified\\\"], text: '52'\", \"classes: [], text: '52'\", \"classes: [\\\"fauxBlockLink-linkRow\\\", \\\"u-concealed\\\"], text: '52'\", \"classes: [\\\"uix_reactionBarWrapper\\\"], text: '•••\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tMore options\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tReport\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\t\\n\\tAdd bookmark\\n\\n\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tShare'\", \"classes: [\\\"contentVote-scores\\\"], text: '-5\\n\\t\\t\\t\\t\\t(8\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t-13)'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--total\\\", \\\"is-negative\\\", \\\"js-voteCount\\\", \\\"js-voteCount--total\\\"], text: '-5'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--positive\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--positive\\\"], text: '8'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--negative\\\", \\\"is-negative\\\", \\\"js-voteCount\\\", \\\"js-voteCount--negative\\\"], text: '-13'\"]", "comment_5: [\"classes: [\\\"uix_reactionBarWrapper\\\"], text: '•••\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tMore options\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tReport\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\t\\n\\tAdd bookmark\\n\\n\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tShare'\", \"classes: [\\\"contentVote-scores\\\"], text: '45\\n\\t\\t\\t\\t\\t(45\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"ars_voteScore\\\"], text: '45\\n\\t\\t\\t\\t\\t(45\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--total\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--total\\\"], text: '45'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--positive\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--positive\\\"], text: '45'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--negative\\\", \\\"js-voteCount\\\", \\\"js-voteCount--negative\\\"], text: '0'\"]", "comment_6: [\"classes: [\\\"pairs\\\", \\\"pairs--justified\\\"], text: '115'\", \"classes: [], text: '115'\", \"classes: [\\\"fauxBlockLink-linkRow\\\", \\\"u-concealed\\\"], text: '115'\", \"classes: [\\\"uix_reactionBarWrapper\\\"], text: '•••\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tMore options\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tReport\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\t\\n\\tAdd bookmark\\n\\n\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tShare'\", \"classes: [\\\"contentVote-scores\\\"], text: '40\\n\\t\\t\\t\\t\\t(40\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"ars_voteScore\\\"], text: '40\\n\\t\\t\\t\\t\\t(40\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--total\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--total\\\"], text: '40'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--positive\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--positive\\\"], text: '40'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--negative\\\", \\\"js-voteCount\\\", \\\"js-voteCount--negative\\\"], text: '0'\"]", "comment_7: [\"classes: [\\\"uix_reactionBarWrapper\\\"], text: '•••\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tMore options\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tReport\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\t\\n\\tAdd bookmark\\n\\n\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tShare'\", \"classes: [\\\"contentVote-scores\\\"], text: '10\\n\\t\\t\\t\\t\\t(12\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t-2)'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--total\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--total\\\"], text: '10'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--positive\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--positive\\\"], text: '12'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--negative\\\", \\\"is-negative\\\", \\\"js-voteCount\\\", \\\"js-voteCount--negative\\\"], text: '-2'\"]", "comment_8: [\"classes: [\\\"uix_reactionBarWrapper\\\"], text: '•••\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tMore options\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tReport\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\t\\n\\tAdd bookmark\\n\\n\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tShare'\", \"classes: [\\\"contentVote-scores\\\"], text: '26\\n\\t\\t\\t\\t\\t(27\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t-1)'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--total\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--total\\\"], text: '26'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--positive\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--positive\\\"], text: '27'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--negative\\\", \\\"is-negative\\\", \\\"js-voteCount\\\", \\\"js-voteCount--negative\\\"], text: '-1'\"]", "comment_9: [\"classes: [\\\"pairs\\\", \\\"pairs--justified\\\"], text: '89'\", \"classes: [], text: '89'\", \"classes: [\\\"fauxBlockLink-linkRow\\\", \\\"u-concealed\\\"], text: '89'\", \"classes: [\\\"uix_reactionBarWrapper\\\"], text: '•••\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tMore options\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tReport\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\t\\n\\tAdd bookmark\\n\\n\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tShare'\", \"classes: [\\\"contentVote-scores\\\"], text: '2\\n\\t\\t\\t\\t\\t(2\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"ars_voteScore\\\"], text: '2\\n\\t\\t\\t\\t\\t(2\\n\\t\\t\\t\\t\\t/\\n\\t\\t\\t\\t\\t0)'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--total\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--total\\\"], text: '2'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--positive\\\", \\\"is-positive\\\", \\\"js-voteCount\\\", \\\"js-voteCount--positive\\\"], text: '2'\", \"classes: [\\\"contentVote-score\\\", \\\"contentVote-score--negative\\\", \\\"js-voteCount\\\", \\\"js-voteCount--negative\\\"], text: '0'\"]"]
