tests/snapshots/ars_comments_tests__fetch_comments_from_real_article.snap
---
source: tests/ars_comments_tests.rs
expression: test_result
snapshot_kind: text
---
success_len_5_authors_JournalBot,Lexus Lunar Lorry,slipknottin,Wheels Of Confusion,CADirk
