tests/snapshots/ars_comments_tests__fetch_comments_from_real_article_offline.snap
---
source: tests/ars_comments_tests.rs
expression: "\"network_unavailable\""
---
network_unavailable