tests/snapshots/ars_comments_tests__fetch_top_5_comments_wrapper.snap
---
source: tests/ars_comments_tests.rs
expression: is_error.to_string()
snapshot_kind: text
---
true
