tests/snapshots/ars_comments_tests__limit_functionality.snap
---
source: tests/ars_comments_tests.rs
expression: comments
---
[
  {
    "content": "6",
    "author": "U6",
    "upvotes": 6,
    "downvotes": 0,
    "timestamp": null
  },
  {
    "content": "5",
    "author": "U5",
    "upvotes": 5,
    "downvotes": 0,
    "timestamp": null
  },
  {
    "content": "4",
    "author": "U4",
    "upvotes": 4,
    "downvotes": 0,
    "timestamp": null
  }
]
