tests/snapshots/ars_comments_tests__parse_comments_from_html.snap
---
source: tests/ars_comments_tests.rs
expression: comments
---
[
  {
    "content": "This is a test comment",
    "author": "testuser1",
    "score": 5,
    "timestamp": "2025-01-01T12:00:00Z"
  },
  {
    "content": "Another test comment",
    "author": "testuser2",
    "score": 3,
    "timestamp": "2025-01-01T13:00:00Z"
  }
]
